src/snapshots/ir__tokenizer__tests__string.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    String: hello
- loc:
    line: 1
    col: 1
  token: Plus
- loc:
    line: 1
    col: 1
  token:
    String: world
