src/snapshots/ir__tokenizer__tests__var_decl.snap
---
source: src/tokenizer.rs
expression: res
---
- loc:
    line: 1
    col: 1
  token:
    Keyword: Let
- loc:
    line: 1
    col: 5
  token:
    Identifier: x
- loc:
    line: 1
    col: 7
  token: Equal
- loc:
    line: 1
    col: 1
  token:
    Number: 10
- loc:
    line: 1
    col: 3
  token: Semicolon
